--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.profiles.active=dev
 logging.file=log/server.log
 
+spring.jackson.default-property-inclusion=non_null
+
 
 #spring.mvc.throw-exception-if-no-handler-found=true
 #spring.resources.add-mappings=false
