--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jackson.default-property-inclusion=non_null
 #mybatis.mapperLocations=classpath:mapper/*/**.xml
 ##mybatis.type-aliases-package=com.suda.
 
+spring.siteName=''
+spring.contactEmail=''
