修改文档 代码整理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,7 @@
 spring.profiles.active=dev
 logging.file=log/server.log
-
 spring.jackson.default-property-inclusion=non_null
-
-
-#spring.mvc.throw-exception-if-no-handler-found=true
-#spring.resources.add-mappings=false
-#
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#mybatis.mapperLocations=classpath:mapper/*/**.xml
-##mybatis.type-aliases-package=com.suda.
-
+##站点名称
 spring.siteName=''
+##联系邮件
 spring.contactEmail=''
