跨域权限配置:请求拦截器

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jackson.default-property-inclusion=non_null
 spring.siteName=''
 ##联系邮件
 spring.contactEmail=''
+##allowOrigin
+spring.allowOrigin='*'
