修复默认跨域

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.profiles.active=dev
 logging.file=log/server.log
 spring.jackson.default-property-inclusion=non_null
 ##站点名称
-spring.siteName=''
+spring.siteName=
 ##联系邮件
-spring.contactEmail=''
+spring.contactEmail=
 ##allowOrigin
-spring.allowOrigin='*'
+spring.allowOrigin=*
